SGC-109 Crearea unui buton "OK"

--- a/src/main/resources/SeeOffersAngajat.fxml
+++ b/src/main/resources/SeeOffersAngajat.fxml
@@ -6,4 +6,5 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.SeeOffersAngajat">
    <Label layoutX="262.0" layoutY="67.0" text="Offers" />
    <Button layoutX="32.0" layoutY="32.0" mnemonicParsing="false" onAction="#Back" text="Back" />
+   <Button layoutX="278.0" layoutY="348.0" mnemonicParsing="false" onAction="#OK" text="OK" />
 </AnchorPane>
