--- a/src/main/resources/SeeOffersAngajat.fxml
+++ b/src/main/resources/SeeOffersAngajat.fxml
@@ -7,4 +7,5 @@
    <Label layoutX="262.0" layoutY="67.0" text="Offers" />
    <Button layoutX="32.0" layoutY="32.0" mnemonicParsing="false" onAction="#Back" text="Back" />
    <Button layoutX="278.0" layoutY="348.0" mnemonicParsing="false" onAction="#OK" text="OK" />
+   <Button layoutX="189.0" layoutY="348.0" mnemonicParsing="false" onAction="#Respinge" text="Respinge" />
 </AnchorPane>
