SGC-23 Afisarea ofertelor din fisier

--- a/src/main/resources/SeeOffersAngajat.fxml
+++ b/src/main/resources/SeeOffersAngajat.fxml
@@ -8,4 +8,12 @@
    <Button layoutX="32.0" layoutY="32.0" mnemonicParsing="false" onAction="#Back" text="Back" />
    <Button layoutX="278.0" layoutY="348.0" mnemonicParsing="false" onAction="#OK" text="OK" />
    <Button layoutX="189.0" layoutY="348.0" mnemonicParsing="false" onAction="#Respinge" text="Respinge" />
+   <TableView fx:id="TableView" layoutX="19.0" layoutY="106.0" prefHeight="200.0" prefWidth="550.0">
+     <columns>
+       <TableColumn fx:id="product" prefWidth="130.20001792907715" text="product" />
+       <TableColumn fx:id="price" prefWidth="118.39999389648438" text="price" />
+         <TableColumn fx:id="number" prefWidth="148.0" text="number" />
+         <TableColumn fx:id="state" prefWidth="155.79995727539062" text="state" />
+     </columns>
+   </TableView>
 </AnchorPane>
