--- a/src/main/resources/SeeRequestsAngajat.fxml
+++ b/src/main/resources/SeeRequestsAngajat.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsAngajat">
-   <Label layoutX="272.0" layoutY="56.0" text="See Requests"/>
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsAngajat">
+   <Label layoutX="249.0" layoutY="33.0" text="See Requests" />
+   <Button layoutX="33.0" layoutY="21.0" mnemonicParsing="false" onAction="#Back" text="Back" />
 </AnchorPane>
