SGC-92 crearea unui tabel in care sa se afiseze cererile de produse

--- a/src/main/resources/SeeRequestsAngajat.fxml
+++ b/src/main/resources/SeeRequestsAngajat.fxml
@@ -4,6 +4,13 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsAngajat">
-   <Label layoutX="249.0" layoutY="33.0" text="See Requests" />
+   <Label layoutX="215.0" layoutY="25.0" text="See Requests" />
    <Button layoutX="33.0" layoutY="21.0" mnemonicParsing="false" onAction="#Back" text="Back" />
+   <TableView fx:id="TableView" layoutX="26.0" layoutY="58.0" prefHeight="191.0" prefWidth="440.0">
+     <columns>
+       <TableColumn fx:id="name" prefWidth="139.0" text="name" />
+       <TableColumn fx:id="number" prefWidth="152.0" text="number" />
+         <TableColumn fx:id="urgent" prefWidth="148.0" text="urgent" />
+     </columns>
+   </TableView>
 </AnchorPane>
