--- a/src/main/resources/SeeOffersFurnizor.fxml
+++ b/src/main/resources/SeeOffersFurnizor.fxml
@@ -6,4 +6,12 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.SeeOffersFurnizor">
    <Label layoutX="251.0" layoutY="24.0" prefHeight="38.0" prefWidth="74.0" text="See Offers" />
    <Button layoutX="32.0" layoutY="32.0" mnemonicParsing="false" onAction="#Back" text="Back" />
+   <TableView fx:id="TableView" layoutX="19.0" layoutY="106.0" prefHeight="200.0" prefWidth="550.0">
+      <columns>
+         <TableColumn fx:id="product" prefWidth="130.20001792907715" text="product" />
+         <TableColumn fx:id="price" prefWidth="118.39999389648438" text="price" />
+         <TableColumn fx:id="number" prefWidth="148.0" text="number" />
+         <TableColumn fx:id="state" prefWidth="155.79995727539062" text="state" />
+      </columns>
+   </TableView>
 </AnchorPane>
