--- a/src/main/resources/SeeOffersFurnizor.fxml
+++ b/src/main/resources/SeeOffersFurnizor.fxml
@@ -14,4 +14,5 @@
          <TableColumn fx:id="state" prefWidth="155.79995727539062" text="state" />
       </columns>
    </TableView>
+   <Button layoutX="275.0" layoutY="335.0" mnemonicParsing="false" onAction="#Delete" text="Delete" />
 </AnchorPane>
