--- a/src/main/resources/SeeOffersFurnizor.fxml
+++ b/src/main/resources/SeeOffersFurnizor.fxml
@@ -8,11 +8,12 @@
    <Button layoutX="32.0" layoutY="32.0" mnemonicParsing="false" onAction="#Back" text="Back" />
    <TableView fx:id="TableView" layoutX="19.0" layoutY="106.0" prefHeight="200.0" prefWidth="550.0">
       <columns>
-         <TableColumn fx:id="product" prefWidth="130.20001792907715" text="product" />
-         <TableColumn fx:id="price" prefWidth="118.39999389648438" text="price" />
-         <TableColumn fx:id="number" prefWidth="148.0" text="number" />
-         <TableColumn fx:id="state" prefWidth="155.79995727539062" text="state" />
+         <TableColumn fx:id="product" onEditCommit="#editProduct" prefWidth="130.20001792907715" text="product" />
+         <TableColumn fx:id="price" onEditCommit="#editPrice" prefWidth="118.39999389648438" text="price" />
+         <TableColumn fx:id="number" onEditCommit="#editNumber" prefWidth="148.0" text="number" />
+         <TableColumn fx:id="state" onEditCommit="#editState" prefWidth="155.79995727539062" text="state" />
       </columns>
    </TableView>
    <Button layoutX="275.0" layoutY="335.0" mnemonicParsing="false" onAction="#Delete" text="Delete" />
+   <Button layoutX="427.0" layoutY="335.0" mnemonicParsing="false" onAction="#Edit" text="Edit" />
 </AnchorPane>
