SGC-19 Crearea unui buton "Add"

--- a/src/main/resources/SeeOffersFurnizor.fxml
+++ b/src/main/resources/SeeOffersFurnizor.fxml
@@ -16,4 +16,5 @@
    </TableView>
    <Button layoutX="275.0" layoutY="335.0" mnemonicParsing="false" onAction="#Delete" text="Delete" />
    <Button layoutX="427.0" layoutY="335.0" mnemonicParsing="false" onAction="#Edit" text="Edit" />
+   <Button layoutX="118.0" layoutY="335.0" mnemonicParsing="false" onAction="#Add" text="Add" />
 </AnchorPane>
