SGC-106 creare buton "back"

--- a/src/main/resources/CreateContract.fxml
+++ b/src/main/resources/CreateContract.fxml
@@ -19,4 +19,5 @@
    <TextField layoutX="308.0" layoutY="235.0" />
    <TextField layoutX="308.0" layoutY="270.0" />
    <Button layoutX="240.0" layoutY="341.0" mnemonicParsing="false" onAction="#Ok" text="Ok" />
+   <Button layoutX="24.0" layoutY="21.0" mnemonicParsing="false" onAction="#Back" text="Back" />
 </AnchorPane>
