--- a/src/main/resources/SeeRequestsFurnizor.fxml
+++ b/src/main/resources/SeeRequestsFurnizor.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="SeeRequestsFurnizor">
-    <Label layoutX="243.0" layoutY="50.0" text="See Requests"/>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SeeRequestsFurnizor">
+    <Label layoutX="243.0" layoutY="50.0" text="See Requests" />
 </AnchorPane>
