--- a/src/main/resources/SeeRequestsFurnizor.fxml
+++ b/src/main/resources/SeeRequestsFurnizor.fxml
@@ -5,4 +5,5 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SeeRequestsFurnizor">
     <Label layoutX="243.0" layoutY="50.0" text="See Requests" />
+   <Button layoutX="27.0" layoutY="24.0" mnemonicParsing="false" onAction="#Back" text="Back" />
 </AnchorPane>
