--- a/src/main/resources/HomeAdministrator.fxml
+++ b/src/main/resources/HomeAdministrator.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.HomeAdministrator">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeAdministrator">
     <Text layoutX="246.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Administrator" />
     <Button layoutX="494.0" layoutY="24.0" mnemonicParsing="false" onAction="#LogOut" text="Log out" />
    <Button layoutX="466.0" layoutY="81.0" mnemonicParsing="false" onAction="#registerAorF" text="Register Someone" />
