--- a/src/main/resources/HomeFurnizor.fxml
+++ b/src/main/resources/HomeFurnizor.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.HomeFurnizor">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeFurnizor">
     <Text layoutX="244.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Furnizor">
         <font>
             <Font size="17.0" />
