--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.LogIn">
-    <Label layoutX="138.0" layoutY="46.0" text="Sistem Gestionare Cafenea" textAlignment="JUSTIFY"
-           textFill="#e40b0b">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: #3b5c6e;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.Login.LogIn">
+    <Label layoutX="209.0" layoutY="27.0" prefHeight="50.0" prefWidth="264.0" text="Sistem Gestionare Cafenea" textAlignment="JUSTIFY" textFill="#f2741b">
         <font>
-            <Font size="19.0"/>
+            <Font size="22.0" />
         </font>
     </Label>
-    <Label layoutX="93.0" layoutY="113.0" text="E-mail"/>
-    <Label layoutX="93.0" layoutY="150.0" text="Password"/>
-    <TextField fx:id="UsernameField" layoutX="176.0" layoutY="109.0"/>
-    <PasswordField fx:id="PasswordField" layoutX="176.0" layoutY="146.0"/>
-    <Button layoutX="224.0" layoutY="197.0" mnemonicParsing="false" onAction="#PressButton" text="Log In"/>
-    <Text fx:id="LogInMessage" layoutX="176.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0"
-          wrappingWidth="149.00000393390656"/>
-    <Button layoutX="41.0" layoutY="243.0" mnemonicParsing="false" onAction="#Register" text="Register"/>
+    <TextField fx:id="UsernameField" layoutX="236.0" layoutY="109.0" prefHeight="25.0" prefWidth="210.0" promptText="username" style="-fx-background-color: #3b5c6e;">
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets>
+      <effect>
+         <SepiaTone level="0.67" />
+      </effect></TextField>
+    <PasswordField fx:id="PasswordField" layoutX="236.0" layoutY="150.0" prefHeight="25.0" prefWidth="210.0" promptText="password" style="-fx-background-color: #3b5c6e;">
+      <effect>
+         <SepiaTone level="0.67" />
+      </effect></PasswordField>
+    <Button layoutX="289.0" layoutY="204.0" mnemonicParsing="false" onAction="#PressButton" prefHeight="25.0" prefWidth="105.0" style="-fx-background-color: #6c91a6;" text="Log In" textFill="#dfe7eb" />
+    <Text fx:id="LogInMessage" fill="WHITE" fontSmoothingType="LCD" layoutX="14.0" layoutY="107.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="158.00000393390656">
+      <font>
+         <Font size="17.0" />
+      </font></Text>
+    <Button layoutX="394.0" layoutY="261.0" mnemonicParsing="false" onAction="#Register" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #d69158;" text="Register" textFill="#fff3ea" />
+    <ImageView fitHeight="300.0" fitWidth="210.0" opacity="0.26" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../../../../coffee5.jpg"/>
+    </ImageView>
 </AnchorPane>
