--- a/src/main/resources/HomeUsers/HomeAngajat.fxml
+++ b/src/main/resources/HomeUsers/HomeAngajat.fxml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeAngajat">
-    <Text layoutX="240.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Angajat">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #804b19;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeAngajat">
+    <ImageView fitHeight="400.0" fitWidth="271.0" layoutX="381.0" opacity="0.7" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../../../../../coffee2.jpg"/>
+    </ImageView>
+    <Text fill="#c69762" layoutX="104.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Angajat" wrappingWidth="174.6982421875">
         <font>
-            <Font size="19.0" />
+            <Font size="27.0" />
         </font>
     </Text>
-    <Button layoutX="499.0" layoutY="24.0" mnemonicParsing="false" onAction="#LogOut" text="Log Out" />
-   <Button layoutX="474.0" layoutY="75.0" mnemonicParsing="false" onAction="#ChangePassword" text="Change Password" />
-   <Button layoutX="480.0" layoutY="126.0" mnemonicParsing="false" onAction="#CreateRequest" text="Create Request" />
-   <Button layoutX="495.0" layoutY="209.0" mnemonicParsing="false" onAction="#SeeOffers" text="See offers" />
-   <Button layoutX="485.0" layoutY="167.0" mnemonicParsing="false" onAction="#SeeRequests" text="See Requests" />
+    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="25.0" prefWidth="87.0" style="-fx-background-color: #a88659;" text="Log Out" textFill="#5e3611" />
+   <Button layoutX="33.0" layoutY="132.0" mnemonicParsing="false" onAction="#ChangePassword" prefHeight="25.0" prefWidth="317.0" style="-fx-background-color: #a88659;" text="Change Password" textFill="#5a3310">
+      <font>
+         <Font size="14.0" />
+      </font></Button>
+   <Button layoutX="33.0" layoutY="192.0" mnemonicParsing="false" onAction="#CreateRequest" prefHeight="25.0" prefWidth="317.0" style="-fx-background-color: #a88659;" text="Create Request" textFill="#5a3310">
+      <font>
+         <Font size="14.0" />
+      </font></Button>
+   <Button layoutX="33.0" layoutY="314.0" mnemonicParsing="false" onAction="#SeeOffers" prefHeight="25.0" prefWidth="317.0" style="-fx-background-color: #a88659;" text="See offers" textFill="#5a3310">
+      <font>
+         <Font size="14.0" />
+      </font></Button>
+   <Button layoutX="33.0" layoutY="253.0" mnemonicParsing="false" onAction="#SeeRequests" prefHeight="25.0" prefWidth="317.0" style="-fx-background-color: #a88659;" text="See Requests" textFill="#5a3310">
+      <font>
+         <Font size="14.0" />
+      </font></Button>
 
 </AnchorPane>
