--- a/src/main/resources/HomeUsers/HomeFurnizor.fxml
+++ b/src/main/resources/HomeUsers/HomeFurnizor.fxml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeFurnizor">
-    <Text layoutX="244.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Furnizor">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #59a88f;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeFurnizor">
+    <ImageView fitHeight="441.0" fitWidth="338.0" layoutX="-3.0" layoutY="-5.0" opacity="0.68" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../../../../../coffee7.jpg"/>
+    </ImageView>
+    <Text fill="#e1f7f0" layoutX="179.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Furnizor">
         <font>
-            <Font size="17.0" />
+            <Font size="37.0" />
         </font>
     </Text>
-    <Button layoutX="502.0" layoutY="24.0" mnemonicParsing="false" onAction="#LogOut" text="Log Out" />
-   <Button layoutX="477.0" layoutY="66.0" mnemonicParsing="false" onAction="#ChangePassword" text="Change Password" />
-   <Button layoutX="498.0" layoutY="158.0" mnemonicParsing="false" onAction="#SeeOffers" text="See offers" />
-   <Button layoutX="489.0" layoutY="200.0" mnemonicParsing="false" onAction="#SeeRequests" text="See Requests" />
+    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #59a88f;" text="Log Out" textFill="#e1f7f0">
+      <font>
+         <Font size="13.0" />
+      </font></Button>
+   <Button layoutX="320.0" layoutY="120.0" mnemonicParsing="false" onAction="#ChangePassword" prefHeight="30.0" prefWidth="247.0" style="-fx-background-color: #e1f7f0;" text="Change Password" textFill="#498975">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
+   <Button layoutX="320.0" layoutY="203.0" mnemonicParsing="false" onAction="#SeeOffers" prefHeight="31.0" prefWidth="247.0" style="-fx-background-color: #e1f7f0;" text="See offers" textFill="#498975">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
+   <Button layoutX="320.0" layoutY="290.0" mnemonicParsing="false" onAction="#SeeRequests" prefHeight="31.0" prefWidth="247.0" style="-fx-background-color: #e1f7f0;" text="See Requests" textFill="#498975">
+      <font>
+         <Font size="15.0" />
+      </font></Button>
 </AnchorPane>
