--- a/src/main/resources/Password/ChangePassword.fxml
+++ b/src/main/resources/Password/ChangePassword.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Change_Password.ChangePassword">
-   <TextField fx:id="UsernameField" layoutX="126.0" layoutY="59.0"/>
-   <PasswordField fx:id="OldPasswordField" layoutX="126.0" layoutY="89.0"/>
-   <Label layoutX="41.0" layoutY="63.0" text="E-mail adress"/>
-   <Label layoutX="40.0" layoutY="93.0" text="Old Password"/>
-   <Label layoutX="38.0" layoutY="124.0" text="New Password"/>
-   <PasswordField fx:id="NewPasswordField" layoutX="126.0" layoutY="120.0"/>
-   <Button layoutX="168.0" layoutY="155.0" mnemonicParsing="false" onAction="#Change" text="Change"/>
-   <Label layoutX="115.0" layoutY="14.0" text="Change your password">
+<AnchorPane prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: #ffed63;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Change_Password.ChangePassword">
+   <ImageView fitHeight="356.0" fitWidth="242.0" layoutX="-1.0" opacity="0.61" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../../../../../coffee8.jpg"/>
+   </ImageView>
+   <TextField fx:id="UsernameField" layoutX="219.0" layoutY="55.0" promptText="username" style="-fx-background-color: #fffa96;" />
+   <PasswordField fx:id="OldPasswordField" layoutX="219.0" layoutY="88.0" promptText="old password" style="-fx-background-color: #fffa96;" />
+   <PasswordField fx:id="NewPasswordField" layoutX="219.0" layoutY="121.0" promptText="new password" style="-fx-background-color: #fffa96;" />
+   <Button layoutX="265.0" layoutY="155.0" mnemonicParsing="false" onAction="#Change" style="-fx-background-color: #b08a23;" text="Change" textFill="#ffed63" />
+   <Label layoutX="203.0" layoutY="14.0" text="Change your password" textFill="#b08a23">
       <font>
-         <Font size="17.0"/>
+         <Font size="18.0" />
       </font>
    </Label>
-   <Text fx:id="ChangeMessage" layoutX="38.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0"/>
+   <Text fx:id="ChangeMessage" fill="#43330a" layoutX="38.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="165.0">
+      <font>
+         <Font size="18.0" />
+      </font></Text>
 </AnchorPane>
