--- a/src/main/resources/Password/ChangedSuccessfully.fxml
+++ b/src/main/resources/Password/ChangedSuccessfully.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="100.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Change_Password.ChangedSuccessfully">
-   <Button layoutX="77.0" layoutY="50.0" mnemonicParsing="false" onAction="#CloseWindow" text="Okay!"/>
-   <Text layoutX="3.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password changed successfully!">
+<AnchorPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #bfe3a6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Change_Password.ChangedSuccessfully">
+   <Button layoutX="36.0" layoutY="50.0" mnemonicParsing="false" onAction="#CloseWindow" prefHeight="25.0" prefWidth="128.0" style="-fx-background-color: #75995c;" text="Okay!" textFill="#cdeeb5" />
+   <Text fill="#4b6837" layoutX="3.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password changed successfully!">
       <font>
-         <Font size="14.0"/>
+         <Font size="14.0" />
       </font>
    </Text>
 </AnchorPane>
