--- a/src/main/resources/Requests/CreateRequest.fxml
+++ b/src/main/resources/Requests/CreateRequest.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.CreateRequest">
-   <TextField fx:id="NameField" layoutX="190.0" layoutY="93.0" />
-   <TextField fx:id="NumberField" layoutX="190.0" layoutY="138.0" />
-   <ChoiceBox fx:id="UrgentField" layoutX="190.0" layoutY="188.0" prefWidth="150.0" />
-   <Label layoutX="104.0" layoutY="97.0" text="Produs" />
-   <Label layoutX="104.0" layoutY="142.0" text="Nr. bucati" />
-   <Label layoutX="112.0" layoutY="192.0" text="Urgent" />
-   <Label layoutX="188.0" layoutY="26.0" text="Create Request">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: #874662;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.CreateRequest">
+   <ImageView fitHeight="455.0" fitWidth="300.0" opacity="0.46" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../../../../../coffee10.jpg"/>
+   </ImageView>
+   <TextField fx:id="NameField" layoutX="307.0" layoutY="90.0" opacity="0.9" prefHeight="25.0" prefWidth="183.0" promptText="product" style="-fx-background-color: #facaec;" />
+   <TextField fx:id="NumberField" layoutX="306.0" layoutY="138.0" opacity="0.9" prefHeight="25.0" prefWidth="183.0" promptText="number" style="-fx-background-color: #facaec;" />
+   <ChoiceBox fx:id="UrgentField" layoutX="307.0" layoutY="200.0" opacity="0.9" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: #facaec;" />
+   <Label layoutX="373.0" layoutY="172.0" text="urgent ?" textFill="#ababab">
       <font>
-         <Font size="23.0" />
+         <Font size="14.0" />
+      </font></Label>
+   <Label layoutX="310.0" layoutY="27.0" opacity="0.83" text="Create Request" textFill="#27135e">
+      <font>
+         <Font size="26.0" />
       </font>
    </Label>
-   <Text fx:id="RequestMessage" layoutX="253.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-   <Button layoutX="248.0" layoutY="226.0" mnemonicParsing="false" onAction="#Okay" text="OK" />
-   <Button layoutX="22.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" text="Back" />
+   <Text fx:id="RequestMessage" fill="#23105b" layoutX="44.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="213.0">
+      <font>
+         <Font size="18.0" />
+      </font></Text>
+   <Button layoutX="344.0" layoutY="250.0" mnemonicParsing="false" onAction="#Okay" opacity="0.9" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #facaec;" text="OK" textFill="#27135e" />
+   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" opacity="0.61" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #27135e;" text="Back" textFill="#fcf6f6" />
+   <effect>
+      <ColorAdjust brightness="-0.1" contrast="-0.02" />
+   </effect>
 </AnchorPane>
