--- a/src/main/resources/Contracts/CreateContract.fxml
+++ b/src/main/resources/Contracts/CreateContract.fxml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Contracts.CreateContract">
-   <Label layoutX="266.0" layoutY="25.0" text="Create Contract" />
-   <Label layoutX="87.0" layoutY="73.0" text="Nume Furnizor" />
-   <Label layoutX="99.0" layoutY="118.0" text="Produs" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #edbc35;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Contracts.CreateContract">
+   <ImageView fitHeight="477.0" fitWidth="325.0" layoutX="-2.0" layoutY="-3.0" opacity="0.76" pickOnBounds="true"
+              preserveRatio="true">
+      <Image url="@../images/coffee11.jpg"/>
+   </ImageView>
+   <Label layoutX="358.0" layoutY="6.0" text="Create Contract" textFill="#c7510e">
+      <font>
+         <Font size="31.0" />
+      </font></Label>
    <Label layoutX="113.0" layoutY="127.0" />
-   <Label layoutX="107.0" layoutY="162.0" text="Pret" />
-   <Label layoutX="92.0" layoutY="200.0" text="Nr. Bucati" />
-   <Label layoutX="104.0" layoutY="239.0" text="Stare" />
-   <Label layoutX="105.0" layoutY="274.0" text="Date" />
-   <TextField fx:id="numef" layoutX="308.0" layoutY="69.0" />
-   <TextField fx:id="product" layoutX="308.0" layoutY="115.0" />
-   <TextField fx:id="price" layoutX="308.0" layoutY="158.0" />
-   <TextField fx:id="number" layoutX="308.0" layoutY="196.0" />
-   <TextField fx:id="state" layoutX="308.0" layoutY="235.0" />
-   <Button layoutX="240.0" layoutY="341.0" mnemonicParsing="false" onAction="#Ok" text="Ok" />
-   <Button layoutX="24.0" layoutY="21.0" mnemonicParsing="false" onAction="#Back" text="Back" />
-   <Text fx:id="ContractMessage" layoutX="360.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-   <DatePicker fx:id="data" layoutX="296.0" layoutY="279.0" />
+   <TextField fx:id="numef" layoutX="368.0" layoutY="70.0" prefHeight="25.0" prefWidth="192.0" promptText="Nume Furnizor" style="-fx-background-color: #c9853c;" />
+   <TextField fx:id="product" layoutX="368.0" layoutY="115.0" prefHeight="25.0" prefWidth="192.0" promptText="Produs" style="-fx-background-color: #c9853c;" />
+   <TextField fx:id="price" layoutX="368.0" layoutY="153.0" prefHeight="25.0" prefWidth="192.0" promptText="Pret" style="-fx-background-color: #c9853c;" />
+   <TextField fx:id="number" layoutX="368.0" layoutY="200.0" prefHeight="25.0" prefWidth="192.0" promptText="Numar bucati" style="-fx-background-color: #c9853c;" />
+   <TextField fx:id="state" layoutX="368.0" layoutY="245.0" prefHeight="25.0" prefWidth="192.0" promptText="Stare" style="-fx-background-color: #c9853c;" />
+   <Button layoutX="437.0" layoutY="344.0" mnemonicParsing="false" onAction="#Ok" prefHeight="29.0" prefWidth="55.0" style="-fx-background-color: #e57710;" text="Ok" textFill="#fffd8c">
+      <font>
+         <Font size="13.0" />
+      </font></Button>
+   <Button layoutX="18.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" opacity="0.91" prefHeight="25.0" prefWidth="66.0" style="-fx-background-color: #ef801f;" text="Back" textFill="#fffd8c">
+      <font>
+         <Font size="13.0" />
+      </font></Button>
+   <Text fx:id="ContractMessage" fill="WHITE" fontSmoothingType="LCD" layoutX="59.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="201.99999499320984">
+      <font>
+         <Font size="17.0" />
+      </font></Text>
+   <DatePicker fx:id="data" layoutX="368.0" layoutY="289.0" prefHeight="25.0" prefWidth="192.0" promptText="Data" style="-fx-background-color: #c9853c;" />
 </AnchorPane>
