--- a/src/main/resources/HomeUsers/HomeAngajat.fxml
+++ b/src/main/resources/HomeUsers/HomeAngajat.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #804b19;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeAngajat">
-    <ImageView fitHeight="400.0" fitWidth="271.0" layoutX="381.0" opacity="0.7" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../../../../../coffee2.jpg"/>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #804b19;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeAngajat">
+    <ImageView fitHeight="400.0" fitWidth="271.0" layoutX="381.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../../../../../SistemGestionareCafenea1/src/main/resources/images/coffee2.jpg" />
     </ImageView>
     <Text fill="#c69762" layoutX="104.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Angajat" wrappingWidth="174.6982421875">
         <font>
