--- a/src/main/resources/HomeUsers/HomeFurnizor.fxml
+++ b/src/main/resources/HomeUsers/HomeFurnizor.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #59a88f;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeFurnizor">
-    <ImageView fitHeight="441.0" fitWidth="338.0" layoutX="-3.0" layoutY="-5.0" opacity="0.68" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../../../../../coffee7.jpg"/>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #59a88f;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Log_in.UsersHome.HomeFurnizor">
+    <ImageView fitHeight="441.0" fitWidth="338.0" layoutX="-3.0" layoutY="-5.0" opacity="0.68" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../../../../../SistemGestionareCafenea1/src/main/resources/images/coffee7.jpg" />
     </ImageView>
     <Text fill="#e1f7f0" layoutX="179.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Furnizor">
         <font>
