--- a/src/main/resources/Password/ChangePassword.fxml
+++ b/src/main/resources/Password/ChangePassword.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: #ffed63;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Change_Password.ChangePassword">
    <ImageView fitHeight="356.0" fitWidth="242.0" layoutX="-1.0" opacity="0.61" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../../../../../coffee8.jpg"/>
+      <Image url="@../../../../../SistemGestionareCafenea1/src/main/resources/images/coffee8.jpg" />
    </ImageView>
    <TextField fx:id="UsernameField" layoutX="219.0" layoutY="55.0" promptText="username" style="-fx-background-color: #fffa96;" />
    <PasswordField fx:id="OldPasswordField" layoutX="219.0" layoutY="88.0" promptText="old password" style="-fx-background-color: #fffa96;" />
