--- a/src/main/resources/Requests/CreateRequest.fxml
+++ b/src/main/resources/Requests/CreateRequest.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="500.0" style="-fx-background-color: #874662;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.CreateRequest">
    <ImageView fitHeight="455.0" fitWidth="300.0" opacity="0.46" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../../../../../coffee10.jpg"/>
+      <Image url="@../../../../../SistemGestionareCafenea1/src/main/resources/images/coffee10.jpg" />
    </ImageView>
    <TextField fx:id="NameField" layoutX="307.0" layoutY="90.0" opacity="0.9" prefHeight="25.0" prefWidth="183.0" promptText="product" style="-fx-background-color: #facaec;" />
    <TextField fx:id="NumberField" layoutX="306.0" layoutY="138.0" opacity="0.9" prefHeight="25.0" prefWidth="183.0" promptText="number" style="-fx-background-color: #facaec;" />
