--- a/src/main/resources/Offers/CreateOffer.fxml
+++ b/src/main/resources/Offers/CreateOffer.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ac80ff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.CreateOffer">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ac80ff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.CreateOffer">
    <ImageView fitHeight="402.0" fitWidth="288.0" opacity="0.79" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../images/coffee12.jpg"/>
+      <Image url="@../images/coffee12.jpg" />
    </ImageView>
    <Label layoutX="202.0" layoutY="14.0" prefHeight="50.0" prefWidth="196.0" text="Create Offer" textFill="#fff5e3">
       <font>
@@ -20,11 +15,11 @@
       </font>
    </Label>
    <ChoiceBox fx:id="state" layoutX="349.0" layoutY="205.0" prefHeight="25.0" prefWidth="177.0" style="-fx-background-color: #ede1b1;" />
-   <TextField fx:id="price" layoutX="348.0" layoutY="149.0" prefHeight="25.0" prefWidth="177.0" promptText="Pret" style="-fx-background-color: #ede1b1;" />
-   <TextField fx:id="number" layoutX="348.0" layoutY="110.0" prefHeight="25.0" prefWidth="177.0" promptText="Numar bucati" style="-fx-background-color: #ede1b1;" />
-   <TextField fx:id="product" layoutX="348.0" layoutY="74.0" prefHeight="25.0" prefWidth="177.0" promptText="Produs" style="-fx-background-color: #ede1b1;" />
-   <TextField fx:id="numef" layoutX="349.0" layoutY="247.0" prefHeight="29.0" prefWidth="177.0" promptText="Nume furnizor" style="-fx-background-color: #ede1b1;" />
-   <Label layoutX="381.0" layoutY="181.0" text="Starea produsului:" textFill="WHITE">
+   <TextField fx:id="price" layoutX="348.0" layoutY="149.0" prefHeight="25.0" prefWidth="177.0" promptText="Price" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="number" layoutX="348.0" layoutY="110.0" prefHeight="25.0" prefWidth="177.0" promptText="Number" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="product" layoutX="348.0" layoutY="74.0" prefHeight="25.0" prefWidth="177.0" promptText="Product" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="numef" layoutX="349.0" layoutY="247.0" prefHeight="29.0" prefWidth="177.0" promptText="Furnizor Name" style="-fx-background-color: #ede1b1;" />
+   <Label layoutX="395.0" layoutY="181.0" text="Product state:" textFill="WHITE">
       <font>
          <Font size="14.0" />
       </font></Label>
