--- a/src/main/resources/Contracts/CreateContract.fxml
+++ b/src/main/resources/Contracts/CreateContract.fxml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #edbc35;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Contracts.CreateContract">
-   <ImageView fitHeight="477.0" fitWidth="325.0" layoutX="-2.0" layoutY="-3.0" opacity="0.76" pickOnBounds="true"
-              preserveRatio="true">
-      <Image url="@../images/coffee11.jpg"/>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #edbc35;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Contracts.CreateContract">
+   <ImageView fitHeight="477.0" fitWidth="325.0" layoutX="-2.0" layoutY="-3.0" opacity="0.76" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../images/coffee11.jpg" />
    </ImageView>
    <Label layoutX="358.0" layoutY="6.0" text="Create Contract" textFill="#c7510e">
       <font>
@@ -33,7 +27,7 @@
       <font>
          <Font size="13.0" />
       </font></Button>
-   <Text fx:id="ContractMessage" fill="WHITE" fontSmoothingType="LCD" layoutX="59.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="201.99999499320984">
+   <Text fx:id="ContractMessage" fill="WHITE" fontSmoothingType="LCD" layoutX="60.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="201.99999499320984">
       <font>
          <Font size="17.0" />
       </font></Text>
