--- a/src/main/resources/Register/RegisterbyAdm.fxml
+++ b/src/main/resources/Register/RegisterbyAdm.fxml
@@ -14,7 +14,7 @@
         </font>
     </Label>
     <ImageView fitHeight="300.0" fitWidth="275.0" opacity="0.38" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../../../../../SistemGestionareCafenea/src/main/resources/images/coffee6.jpg" />
+        <Image url="@../images/coffee6.jpg" />
     </ImageView>
     <TextField fx:id="usernameField" layoutX="153.0" layoutY="78.0" opacity="0.93" prefHeight="25.0" prefWidth="229.0" promptText="username" style="-fx-background-color: #5c9e81;">
       <opaqueInsets>
